# ObjectDetection

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.jetson  INTERACTIVE_TUTORIAL.md  LICENSE  NEXT_STEPS.md  PAD.md  QUICK_REFERENCE.md  README.md  RESTRUCTURE_SUMMARY.md  START_HERE.md  TESTING_GUIDE.md  WEEK5_DELIVERABLE.md  config.yaml  conftest.py  detector.py  environment.yml  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
commands/: design.md  implement.md  plan.md  validate.md
docs/: DESIGN.md  benchmarks.md  jetson.md
feature-1/: PRD.md  design.md  plan.md  post_development_analysis.md  validate.md
feature-1/tasks/: task6_testing.md  task7_demo.md  tasks_README.md
feature-2/: PRD.md  design.md  plan.md  post_development_analysis.md  validate.md
feature-3/: PRD.md  QUICKSTART.md  TESTING_GUIDE.md  USAGE.md  design.md  plan.md  post_development_analysis.md  validate.md
flowcount/: __init__.py  cli.py  config.py  detector.py  export.py  logging_config.py  pipeline.py  synthetic.py  tracker.py  video_source.py  visualization.py
flowcount/analytics/: __init__.py  base.py  exporters.py  heatmap.py  line_counter.py  manager.py  recorder.py  zones.py
flowcount/safety/: __init__.py  alerts.py  incidents.py  motion.py  roi.py  stabilize.py  static_objects.py  zone_incident.py
flowcount/web/: __init__.py  server.py
flowcount/web/static/: index.html
project/: config.yaml  demo.py  main.py  test_image.py
project/scripts/: benchmark.py  create_test_video.py
project/src/: detector.py  tracker.py  video_source.py  visualization.py
project/tests/: __init__.py  conftest.py  test_tracker.py
scripts/: bench.py  demo.py
src/: __init__.py  config.py  detector.py  logging_config.py  pipeline.py  tracker.py  video_source.py  visualization.py
src/analytics/: __init__.py  exporters.py  heatmap.py  line_counter.py  manager.py  recorder.py  zones.py
templates/: PRD_template.md  task_template.md
tests/: test_analytics_exporters.py  test_analytics_heatmap.py  test_analytics_line.py  test_analytics_manager.py  test_analytics_manager_stats.py  test_analytics_recorder.py  test_analytics_zones.py  test_cli_safety.py  test_config.py  test_detector.py  test_detector_geometry.py  test_export_and_engine.py  test_pipeline.py  test_pipeline_context.py  test_safety_alerts.py  test_safety_incidents.py  test_safety_integration.py  test_safety_motion.py  test_safety_roi.py  test_safety_stabilize.py  test_safety_static_objects.py  test_safety_zone_incident.py  test_tracker.py  test_video_source.py  test_web_safety.py  test_web_server.py
web/: server.py
web/static/: index.html
