[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flowcount"
version = "0.5.0"
description = "Real-time traffic analytics and safety monitoring: YOLO detection, ByteTrack-style tracking, line counts, zones, heatmaps, incident detection, and a live web dashboard"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Hector Lugo" }]
keywords = ["object-detection", "object-tracking", "yolo", "bytetrack", "traffic-analytics", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy",
    "scipy",
    "filterpy",
    # On a Jetson, do NOT let pip install this wheel: it ships without GStreamer
    # and shadows the JetPack CUDA/GStreamer OpenCV, killing NVDEC. The Jetson
    # path installs FlowCount with --no-deps and relies on the system cv2
    # (see Dockerfile.jetson and docs/jetson.md).
    "opencv-python",
    "pyyaml",
]

[project.optional-dependencies]
# Real YOLO inference (pulls torch). The synthetic demo/dashboard need none of this.
yolo = ["ultralytics>=8.3"]
web = ["fastapi", "uvicorn[standard]"]
demo = ["imageio"]
dev = ["pytest", "pytest-cov", "httpx", "ruff", "mypy", "pre-commit"]

[project.scripts]
flowcount = "flowcount.cli:main"
flowcount-web = "flowcount.web.server:main"
flowcount-export = "flowcount.export:main"

[project.urls]
Repository = "https://github.com/Wavy-Hec/ObjectDetection"

[tool.setuptools.packages.find]
include = ["flowcount*"]

[tool.setuptools.package-data]
"flowcount.web" = ["static/*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
]
ignore = [
    "E741", # ambiguous single-letter names (w/h/l are idiomatic in CV code)
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true  # cv2 / filterpy / ultralytics ship no stubs
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["flowcount"]
omit = ["flowcount/web/static/*"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:", "pragma: no cover"]
